--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ node_modules
 .dumi/tmp
 .dumi/tmp-production
 .DS_Store
+
+lib
+es
+packages/*/lib
+packages/*/es
+packages/components/*/lib
+packages/components/*/es
