--- a/package.json
+++ b/package.json
@@ -2,11 +2,26 @@
   "name": "lerna-test-five",
   "version": "0.0.1",
   "description": "A static site based on dumi",
+  "type": "module",
+  "main": "lib/index.js",
+  "module": "es/index.js",
+  "types": "lib/index.d.ts",
+  "files": [
+    "lib",
+    "es"
+  ],
   "scripts": {
     "start": "npm run dev",
     "dev": "dumi dev",
-    "build": "dumi build",
-    "prepare": "husky install && dumi setup"
+    "build:doc": "dumi build",
+    "prepare": "husky install && dumi setup",
+    "compile": "rollup -c build/rollup.config.js --environment relativePath:../test",
+    "watch": "yarn compile -- --watch",
+    "build": "shx rm -rf lib es && yarn compile",
+    "lint:eslint": "eslint --fix --ext .js,.ts,.tsx ./src",
+    "lint:prettier": "prettier --write --loglevel warn \"src/**/*.{js,ts,json,tsx,css,less,scss,html,md}\"",
+    "lint:stylelint": "stylelint --cache --fix \"**/*.{less,postcss,css,scss}\" --cache --cache-location node_modules/.cache/stylelint/",
+    "lint:lint-staged": "lint-staged"
   },
   "authors": [],
   "license": "MIT",
@@ -25,7 +40,52 @@
     "@commitlint/config-conventional": "^17.1.0",
     "dumi": "^2.2.0",
     "husky": "^8.0.1",
+    "lerna": "^7.1.1",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1"
-  }
+    "prettier": "^2.7.1",
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.19.6",
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@rollup/plugin-alias": "^4.0.2",
+    "@rollup/plugin-babel": "^6.0.2",
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-image": "^3.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-strip": "^2.1.0",
+    "@rollup/plugin-terser": "^0.1.0",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.36.2",
+    "antd": "^4.24.2",
+    "autoprefixer": "^10.4.13",
+    "cssnano": "^5.1.14",
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.31.7",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "less": "^4.1.3",
+    "postcss": "^8.4.18",
+    "rollup": "^3.2.5",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-node-externals": "^5.0.2",
+    "rollup-plugin-postcss": "^4.0.2",
+    "shx": "^0.3.4",
+    "stylelint": "^14.11.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard": "^28.0.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
+    "stylelint-order": "^5.0.0",
+    "typescript": "*"
+  },
+  "dependencies": {}
 }
