--- a/package.json
+++ b/package.json
@@ -72,5 +72,31 @@
     "stylelint-order": "^5.0.0",
     "typescript": "*"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@babel/runtime-corejs3": "^7.20.1",
+    "@reduxjs/toolkit": "^1.8.5",
+    "@stomp/stompjs": "^7.0.0",
+    "crypto-js": "^4.1.1",
+    "html-mzc-tool": "1.0.73",
+    "immer": "^9.0.15",
+    "jsencrypt": "^3.3.1",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-custom-scrollbars": "^4.2.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "resize-observer-polyfill": "^1.5.1",
+    "screenfull": "5.2.0"
+  },
+  "peerDependencies": {
+    "antd": ">=4.22.8",
+    "axios": ">=1.1.2",
+    "classnames": ">=2.3.1",
+    "lodash": ">=4.0.0",
+    "react": ">=17.0.0",
+    "react-dom": ">=17.0.0",
+    "react-redux": ">=8.0.2",
+    "react-router-dom": ">=6.3.0"
+  }
 }
