--- a/packages/components/base-input/package.json
+++ b/packages/components/base-input/package.json
@@ -2,11 +2,98 @@
   "name": "base-input",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "lib/index.js",
+  "module": "es/index.js",
+  "types": "lib/index.d.ts",
+  "files": [
+    "lib",
+    "es"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "compile": "rollup -c ../../../build/rollup.config.js --environment relativePath:../packages/components/base-input",
+    "watch": "yarn compile -- --watch",
+    "build": "shx rm -rf lib es && yarn compile"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "dumi": "^2.2.0",
+    "husky": "^8.0.1",
+    "lerna": "^7.1.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.19.6",
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-react": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@rollup/plugin-alias": "^4.0.2",
+    "@rollup/plugin-babel": "^6.0.2",
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-image": "^3.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-strip": "^2.1.0",
+    "@rollup/plugin-terser": "^0.1.0",
+    "@types/react": "^18.0.17",
+    "@types/react-dom": "^18.0.6",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.36.2",
+    "antd": "^4.24.2",
+    "autoprefixer": "^10.4.13",
+    "cssnano": "^5.1.14",
+    "eslint": "^8.22.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-standard-with-typescript": "^22.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-n": "^15.0.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.31.7",
+    "eslint-plugin-simple-import-sort": "^8.0.0",
+    "less": "^4.1.3",
+    "postcss": "^8.4.18",
+    "rollup": "^3.2.5",
+    "rollup-plugin-copy": "^3.4.0",
+    "rollup-plugin-node-externals": "^5.0.2",
+    "rollup-plugin-postcss": "^4.0.2",
+    "shx": "^0.3.4",
+    "stylelint": "^14.11.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard": "^28.0.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
+    "stylelint-order": "^5.0.0",
+    "typescript": "*"
+  },
+  "dependencies": {
+    "@babel/runtime-corejs3": "^7.20.1",
+    "@reduxjs/toolkit": "^1.8.5",
+    "@stomp/stompjs": "^7.0.0",
+    "crypto-js": "^4.1.1",
+    "html-mzc-tool": "1.0.73",
+    "immer": "^9.0.15",
+    "jsencrypt": "^3.3.1",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-custom-scrollbars": "^4.2.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "resize-observer-polyfill": "^1.5.1",
+    "screenfull": "5.2.0"
+  },
+  "peerDependencies": {
+    "antd": ">=4.22.8",
+    "axios": ">=1.1.2",
+    "classnames": ">=2.3.1",
+    "lodash": ">=4.0.0",
+    "react": ">=17.0.0",
+    "react-dom": ">=17.0.0",
+    "react-redux": ">=8.0.2",
+    "react-router-dom": ">=6.3.0"
+  }
 }
