--- a/packages/components/base-button/package.json
+++ b/packages/components/base-button/package.json
@@ -1,7 +1,8 @@
 {
   "name": "base-button",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
+  "type": "module",
   "main": "lib/index.js",
   "module": "es/index.js",
   "types": "lib/index.d.ts",
@@ -18,19 +19,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
-    "dumi": "^2.2.0",
-    "husky": "^8.0.1",
-    "lerna": "^7.1.1",
-    "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1",
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.19.6",
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
     "@rollup/plugin-alias": "^4.0.2",
     "@rollup/plugin-babel": "^6.0.2",
     "@rollup/plugin-commonjs": "^23.0.2",
@@ -46,6 +42,7 @@
     "antd": "^4.24.2",
     "autoprefixer": "^10.4.13",
     "cssnano": "^5.1.14",
+    "dumi": "^2.2.0",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard-with-typescript": "^22.0.0",
@@ -54,8 +51,12 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.31.7",
     "eslint-plugin-simple-import-sort": "^8.0.0",
+    "husky": "^8.0.1",
+    "lerna": "^7.1.1",
     "less": "^4.1.3",
+    "lint-staged": "^13.0.3",
     "postcss": "^8.4.18",
+    "prettier": "^2.7.1",
     "rollup": "^3.2.5",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-node-externals": "^5.0.2",
