--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,7 +1,8 @@
 {
   "name": "base-utils",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
+  "type": "module",
   "main": "lib/index.js",
   "module": "es/index.js",
   "types": "lib/index.d.ts",
