--- a/packages/components/base-button/package.json
+++ b/packages/components/base-button/package.json
@@ -1,7 +1,10 @@
 {
   "name": "base-button",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
+  "keywords": [],
+  "license": "ISC",
+  "author": "",
   "type": "module",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -11,13 +14,27 @@
     "es"
   ],
   "scripts": {
+    "build": "shx rm -rf lib es && yarn compile",
     "compile": "rollup -c ../../../build/rollup.config.js --environment relativePath:../packages/components/base-button",
-    "watch": "yarn compile -- --watch",
-    "build": "shx rm -rf lib es && yarn compile"
+    "watch": "yarn compile -- --watch"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "dependencies": {
+    "@babel/runtime-corejs3": "^7.20.1",
+    "@reduxjs/toolkit": "^1.8.5",
+    "@stomp/stompjs": "^7.0.0",
+    "crypto-js": "^4.1.1",
+    "html-mzc-tool": "1.0.73",
+    "immer": "^9.0.15",
+    "jsencrypt": "^3.3.1",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-custom-scrollbars": "^4.2.1",
+    "react-dnd": "^16.0.1",
+    "react-dnd-html5-backend": "^16.0.1",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
+    "resize-observer-polyfill": "^1.5.1",
+    "screenfull": "5.2.0"
+  },
   "devDependencies": {
     "@babel/cli": "^7.19.3",
     "@babel/core": "^7.19.6",
@@ -69,23 +86,6 @@
     "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
     "stylelint-order": "^5.0.0",
     "typescript": "*"
-  },
-  "dependencies": {
-    "@babel/runtime-corejs3": "^7.20.1",
-    "@reduxjs/toolkit": "^1.8.5",
-    "@stomp/stompjs": "^7.0.0",
-    "crypto-js": "^4.1.1",
-    "html-mzc-tool": "1.0.73",
-    "immer": "^9.0.15",
-    "jsencrypt": "^3.3.1",
-    "react-copy-to-clipboard": "^5.1.0",
-    "react-custom-scrollbars": "^4.2.1",
-    "react-dnd": "^16.0.1",
-    "react-dnd-html5-backend": "^16.0.1",
-    "redux": "^4.2.0",
-    "redux-thunk": "^2.4.1",
-    "resize-observer-polyfill": "^1.5.1",
-    "screenfull": "5.2.0"
   },
   "peerDependencies": {
     "antd": ">=4.22.8",
