--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,7 +1,10 @@
 {
   "name": "base-utils",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "",
+  "keywords": [],
+  "license": "ISC",
+  "author": "",
   "type": "module",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -11,13 +14,10 @@
     "es"
   ],
   "scripts": {
+    "build": "shx rm -rf lib es && yarn compile",
     "compile": "rollup -c ../../build/rollup.config.js --environment relativePath:../packages/utils",
-    "watch": "yarn compile -- --watch",
-    "build": "shx rm -rf lib es && yarn compile"
+    "watch": "yarn compile -- --watch"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "rollup": "^3.2.5",
     "shx": "^0.3.4"
